--- a/styles.css
+++ b/styles.css
@@ -1,61 +1,61 @@
-/* * {
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
 
 body {
+    font-family: "Montserrat", sans-serif;
+    color: #454545;
+    margin: 0px;
+    padding: 0px;
     background-color: lightgray;
 }
 
-.container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    gap: 10%;
+.page {
+    width: 80%;
+    max-width: 960px;
+    margin: 0 auto;
 }
 
-.circle {
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    background: radial-gradient(circle, black, black);
+.ball, .button {
+    margin: 0 auto;
 }
 
-.fortuneReading {
+.answer {
     position: absolute;
+    width: 14%;
     top: 50%;
     left: 50%;
-} */
-
-.ball {
-    width: 500px;
-    height: 500px;
-    border-radius: 50%;
-    background: #000;
-    position: relative;
-  }
-  
-  .center {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 60%;
-    height: 60%;
-    background: #fff;
-    border-radius: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  #fortune {
-    margin-top: 20px;
-    font-size: 28px;
+    margin-top: -60px;
+    margin-left: -65px;
+    font: 16px 'Open Sans', Helvetica, Arial, sans-serif;
+    color: #222;
+    text-transform: uppercase;
     text-align: center;
-  }
+}
+
+#questionButton {
+    font: 26px 'Montserrat', Helvetica, Arial, sans-serif;
+    border-radius: 5px;
+    border: none;
+    color: #f8f8f8;
+    background-color: #f16059;
+    padding: 10px 75px;
+    display: block;
+    margin: 0 auto;
+}
+
+header {
+    padding-top: 0.25em;
+    text-align: center;
+}
+
+header span {
+    font-size: 60px;
+    color: #f16059;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: 'Montserrat', sans-serif;
+}
